<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_daftar_nama"
        style="@style/MyTextInputLayoutStyle"
        android:layout_width="215dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        app:startIconTint="@color/red"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/til_daftar_goldar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_daftar_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/daftar_nama"
            android:textSize="16sp"
            android:background="@drawable/til_background"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_daftar_goldar"
        style="@style/MyTextInputLayoutStyle"
        android:layout_width="105dp"
        android:layout_height="56dp"
        app:startIconTint="@color/red"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_daftar_nama"
        app:layout_constraintTop_toTopOf="@id/til_daftar_nama"
        app:layout_constraintBottom_toBottomOf="@id/til_daftar_nama">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_daftar_goldar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/gol_darah"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@drawable/til_background"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_daftar_jenis_kelamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/daftar_jenis_kelamin"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="@id/til_daftar_nama"
        app:layout_constraintTop_toBottomOf="@id/til_daftar_goldar"/>

    <RadioGroup
        android:id="@+id/rg_daftar_jenis_kelamin"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tv_daftar_jenis_kelamin"
        app:layout_constraintEnd_toEndOf="@id/til_daftar_goldar"
        app:layout_constraintTop_toBottomOf="@+id/tv_daftar_jenis_kelamin">

        <RadioButton
            android:id="@+id/rb_laki"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:text="@string/laki"
            android:textSize="14sp"/>

        <RadioButton
            android:id="@+id/rb_perempuan"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/perempuan"
            android:textSize="14sp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tv_daftar_tanggal_lahir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/tanggal_lahir"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="@id/til_daftar_nama"
        app:layout_constraintTop_toBottomOf="@id/rg_daftar_jenis_kelamin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_daftar_tanggal_lahir"
        style="@style/MyTextInputLayoutStyle1"
        android:layout_width="120dp"
        android:layout_height="46dp"
        app:layout_constraintStart_toStartOf="@id/tv_daftar_tanggal_lahir"
        app:layout_constraintTop_toBottomOf="@id/tv_daftar_tanggal_lahir">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_daftar_tanggal_lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/default_tanggal"
            android:textSize="12sp"
            android:gravity="center"
            android:background="@drawable/til_background"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ic_calendar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_calendar_month_24"
        app:layout_constraintStart_toEndOf="@id/til_daftar_tanggal_lahir"
        app:layout_constraintTop_toTopOf="@id/til_daftar_tanggal_lahir"
        app:layout_constraintBottom_toBottomOf="@id/til_daftar_tanggal_lahir"/>

    <TextView
        android:id="@+id/tv_daftar_no_telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/no_telephone"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toEndOf="@id/ic_calendar"
        app:layout_constraintTop_toBottomOf="@id/rg_daftar_jenis_kelamin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_daftar_no_telephone"
        style="@style/MyTextInputLayoutStyle1"
        android:layout_width="160dp"
        android:layout_height="46dp"
        app:layout_constraintStart_toStartOf="@id/tv_daftar_no_telephone"
        app:layout_constraintTop_toBottomOf="@id/tv_daftar_no_telephone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_daftar_no_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nohp"
            android:textSize="12sp"
            android:gravity="center|start"
            android:background="@drawable/til_background"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_daftar_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/alamat"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/til_daftar_tanggal_lahir"
        app:layout_constraintTop_toBottomOf="@id/til_daftar_tanggal_lahir"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_daftar_alamat"
        style="@style/MyTextInputLayoutStyle1"
        android:layout_width="0dp"
        android:layout_height="46dp"
        app:layout_constraintStart_toStartOf="@id/tv_daftar_alamat"
        app:layout_constraintEnd_toEndOf="@id/til_daftar_no_telephone"
        app:layout_constraintTop_toBottomOf="@id/tv_daftar_alamat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_daftar_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="12sp"
            android:gravity="center|start"
            android:background="@drawable/til_background"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_daftar_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/daftar_email"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/til_daftar_alamat"
        app:layout_constraintTop_toBottomOf="@id/til_daftar_alamat"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_daftar_email"
        style="@style/MyTextInputLayoutStyle1"
        android:layout_width="0dp"
        android:layout_height="46dp"
        app:layout_constraintStart_toStartOf="@id/tv_daftar_email"
        app:layout_constraintEnd_toEndOf="@id/til_daftar_alamat"
        app:layout_constraintTop_toBottomOf="@id/tv_daftar_email">

        <com.bangkit.capstone.idonor.tools.CustomEditText
            android:id="@+id/ed_daftar_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="12sp"
            android:gravity="center|start"
            android:background="@drawable/til_background"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_daftar_buat_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/buat_passaword"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/til_daftar_email"
        app:layout_constraintTop_toBottomOf="@id/til_daftar_email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_daftar_buat_password"
        style="@style/MyTextInputLayoutStyle1"
        android:layout_width="0dp"
        android:layout_height="46dp"
        app:passwordToggleEnabled="true"
        app:startIconTint="@color/red"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/til_daftar_email"
        app:layout_constraintStart_toStartOf="@id/tv_daftar_buat_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_daftar_buat_password">

        <com.bangkit.capstone.idonor.tools.CustomEditText
            android:id="@+id/ed_daftar_buat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="12sp"
            android:background="@drawable/til_background"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_daftar_konfirmasi_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/konfirmasi_passaword"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/til_daftar_buat_password"
        app:layout_constraintTop_toBottomOf="@id/til_daftar_buat_password"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_daftar_konfirmasi_password"
        style="@style/MyTextInputLayoutStyle1"
        android:layout_width="0dp"
        android:layout_height="46dp"
        app:passwordToggleEnabled="true"
        app:startIconTint="@color/red"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/til_daftar_buat_password"
        app:layout_constraintStart_toStartOf="@id/tv_daftar_konfirmasi_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_daftar_konfirmasi_password">

        <com.bangkit.capstone.idonor.tools.CustomEditText
            android:id="@+id/ed_daftar_konfirmasi_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="12sp"
            android:background="@drawable/til_background"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login_register"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="28dp"
        app:backgroundTint="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_daftar_konfirmasi_password" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/til_daftar_alamat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_move_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punya_akun"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_register"/>
</androidx.constraintlayout.widget.ConstraintLayout>