<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@color/red">

    <ImageView
        android:id="@+id/iv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/questoin_mark"
        app:layout_constraintBottom_toTopOf="@id/iv_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="133dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_email_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:startIconDrawable="@drawable/icon_user"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo">
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_email_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_user"
            android:textSize="12sp"
            android:background="@drawable/til_background"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:startIconDrawable="@drawable/icon_lock"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_login_email_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="12sp"
            android:background="@drawable/til_background"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lupa_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_password"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/til_login_password"
        app:layout_constraintEnd_toEndOf="@id/til_login_password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        app:backgroundTint="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lupa_password" />

    <TextView
        android:id="@+id/tv_bp_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_punya_akun"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar_disini"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        app:backgroundTint="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bp_akun" />
</androidx.constraintlayout.widget.ConstraintLayout>