<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".ui.DetailActivity">

    <ImageView
        android:id="@+id/iv_detail_foto"
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:contentDescription="@string/photo_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_tv_detail"
        android:gravity="center"
        android:text="@string/nama_rs"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:layout_marginEnd="8dp"
        android:text="@string/lokasi"
        android:textColor="@color/black"
        android:drawableRight="@drawable/icon_pin_location"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        android:bottomRightRadius="0dp"
        android:bottomLeftRadius="10dp"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="231dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_detail_foto"/>
</androidx.constraintlayout.widget.ConstraintLayout>